--- a/cli/package.json
+++ b/cli/package.json
@@ -14,7 +14,11 @@
     "build": "tsc",
     "dev": "tsx src/index.ts",
     "test": "echo \"No tests yet\"",
-    "prepublishOnly": "npm run build"
+    "lint": "biome check src/",
+    "lint:fix": "biome check --write src/",
+    "format": "biome format --write src/",
+    "prepublishOnly": "npm run lint && npm run build",
+    "semantic-release": "semantic-release"
   },
   "keywords": [
     "ai",
@@ -43,12 +47,21 @@
     "prompts": "^2.4.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@types/node": "^22.10.1",
     "@types/prompts": "^2.4.9",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
+    "semantic-release": "^24.2.0",
     "tsx": "^4.19.0",
     "typescript": "^5.7.2"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
   }
 }
